--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,25 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Cool First Webpage</title>
+    <title>Uwakwe Nneoma - My First Portfolio</title>
 </head>
 <body>
 
-    <!-- Headings -->
-    <h1>Welcome to My Webpage</h1>
-    <h2>Learning HTML Step by Step</h2>
-    <h3>Beginner Level Project</h3>
+    <!-- Header Section -->
+    <header>
+        <h1>Welcome to My First Portfolio</h1>
+    </header>
 
-    <!-- Required 4 paragraphs -->
-    <p>This is my first paragraph. I am learning how to build a webpage using HTML.</p>
-    <p>HTML means HyperText Markup Language, and it is used to structure webpages.</p>
-    <p>In this project, I am practicing how to use headings, images, and paragraphs.</p>
-    <p>This is my fourth paragraph. I am enjoying the learning process so far!</p>
+    <!-- Main Content -->
+    <main>
+        <!-- Headings and Paragraphs -->
+        <h1>Main Title</h1>
+        <p>This is my first paragraph. I am learning how to build a webpage using HTML.</p>
 
-    <!-- Clickable Image -->
-    <a href="https://www.google.com" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-    </a>
+        <h2>Subheading Level 2</h2>
+        <p>HTML stands for HyperText Markup Language. It helps structure the content of a webpage.</p>
+
+        <h3>Subheading Level 3</h3>
+        <p>This is the third paragraph. I am practicing headings, paragraphs, and images in HTML.</p>
+
+        <p>This is the fourth paragraph. Learning HTML is fun and it builds the foundation for web development.</p>
+
+        <!-- Clickable Image -->
+        <a href="https://www.alxafrica.com" target="_blank">
+            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+        </a>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p>
+    </footer>
 
 </body>
 </html>
