--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,32 +6,76 @@
 </head>
 <body>
 
-    <!-- Header Section -->
+    <!-- Header with site title -->
     <header>
         <h1>Welcome to My First Portfolio</h1>
     </header>
 
     <!-- Main Content -->
     <main>
-        <!-- Headings and Paragraphs -->
-        <h1>Main Title</h1>
-        <p>This is my first paragraph. I am learning how to build a webpage using HTML.</p>
+        <article>
+            <!-- Headings and Paragraphs -->
+            <h1>Main Title</h1>
+            <p>This is my first paragraph. I am learning how to build a webpage using HTML.</p>
 
-        <h2>Subheading Level 2</h2>
-        <p>HTML stands for HyperText Markup Language. It helps structure the content of a webpage.</p>
+            <h2>Subheading Level 2</h2>
+            <p>HTML stands for HyperText Markup Language. It helps structure the content of a webpage.</p>
 
-        <h3>Subheading Level 3</h3>
-        <p>This is the third paragraph. I am practicing headings, paragraphs, and images in HTML.</p>
+            <h3>Subheading Level 3</h3>
+            <p>This is the third paragraph. I am practicing headings, paragraphs, and images in HTML.</p>
 
-        <p>This is the fourth paragraph. Learning HTML is fun and it builds the foundation for web development.</p>
+            <p>This is the fourth paragraph. Learning HTML is fun and it builds the foundation for web development.</p>
 
-        <!-- Clickable Image -->
-        <a href="https://www.alxafrica.com" target="_blank">
-            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-        </a>
+            <!-- Clickable Image -->
+            <a href="https://www.alxafrica.com" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+            </a>
+
+            <!-- Table of Learners (Step 4) -->
+            <div>
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Age</th>
+                            <th>Country</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>25</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>Emily</td>
+                            <td>28</td>
+                            <td>Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Michael</td>
+                            <td>32</td>
+                            <td>Australia</td>
+                        </tr>
+                        <tr>
+                            <td>Sophia</td>
+                            <td>21</td>
+                            <td>UK</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Link to tweets page -->
+            <p>See my <a href="tweets.html">tweets</a>!</p>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
     </main>
 
-    <!-- Footer Section -->
+    <!-- Footer -->
     <footer>
         <p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p>
     </footer>
