--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,15 +6,17 @@
 </head>
 <body>
 
-    <!-- Header with site title -->
+    <!-- Header with navigation links -->
     <header>
-        <h1>Welcome to My First Portfolio</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
     </header>
 
     <!-- Main Content -->
     <main>
         <article>
-            <!-- Headings and Paragraphs -->
             <h1>Main Title</h1>
             <p>This is my first paragraph. I am learning how to build a webpage using HTML.</p>
 
@@ -31,7 +33,7 @@
                 <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
             </a>
 
-            <!-- Table of Learners (Step 4) -->
+            <!-- Table of Learners -->
             <div>
                 <table border="1">
                     <thead>
@@ -65,9 +67,6 @@
                     </tbody>
                 </table>
             </div>
-
-            <!-- Link to tweets page -->
-            <p>See my <a href="tweets.html">tweets</a>!</p>
         </article>
 
         <aside>
