--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Uwakwe Nneoma - Tweets</title>
+</head>
 <body>
+
+    <!-- Header with navigation links -->
     <header>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -6,16 +14,26 @@
         </ul>
     </header>
 
+    <!-- Main Content -->
     <main>
         <article>
-            <!-- Content: paragraphs, headings, images, or embedded tweet -->
+            <!-- Embedded Tweet Example -->
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Learning HTML step by step! #webdevelopment</p>&mdash; Uwakwe Nneoma (@YourHandle)
+                <a href="https://twitter.com/YourHandle/status/1234567890">November 14, 2025</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </article>
+
         <aside>
             <p>placeholder to add comment thread later</p>
         </aside>
     </main>
 
+    <!-- Footer -->
     <footer>
         <p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p>
     </footer>
+
 </body>
+</html>
