--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Uwakwe Nneoma - Tweets</title>
+  <meta charset="utf-8">
+  <title>Uwakwe Nneoma - Tweets</title>
 </head>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Header with navigation links -->
-    <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tweets.html">Tweets</a></li>
-        </ul>
-    </header>
+  <main>
+    <article>
+      <h2>My Latest Tweet</h2>
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Just started building my first HTML portfolio! #ALX #WebDevelopment</p>
+        &mdash; Uwakwe Nneoma (@UwakweNneoma) 
+        <a href="https://twitter.com/UwakweNneoma/status/1234567890">Nov 14, 2025</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js"></script>
+    </article>
 
-    <!-- Main Content -->
-    <main>
-        <article>
-            <!-- Embedded Tweet Example -->
-            <blockquote class="twitter-tweet">
-                <p lang="en" dir="ltr">Learning HTML step by step! #webdevelopment</p>&mdash; Uwakwe Nneoma (@YourHandle)
-                <a href="https://twitter.com/YourHandle/status/1234567890">November 14, 2025</a>
-            </blockquote>
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </article>
+    <aside>
+      <p>Placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
-
-    <!-- Footer -->
-    <footer>
-        <p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p>
-    </footer>
-
+  <footer>
+    <p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
