--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,83 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Uwakwe Nneoma - My First Portfolio</title>
+  <meta charset="utf-8">
+  <title>Uwakwe Nneoma - Homepage</title>
+  <style>
+    /* Table styling to replace obsolete border attribute */
+    table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      padding: 8px;
+      text-align: left;
+    }
+
+    /* Optional: basic spacing for header/nav */
+    header, main, footer {
+      margin: 10px;
+      padding: 10px;
+    }
+
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    nav ul li {
+      display: inline;
+      margin-right: 10px;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: blue;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
+  <!-- Header with navigation -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Header with navigation links -->
-    <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tweets.html">Tweets</a></li>
-        </ul>
-    </header>
+  <!-- Main content -->
+  <main>
+    <article>
+      <h1>Welcome to My First Portfolio</h1>
+      <h2>About This Project</h2>
+      <p>This is my first portfolio webpage built as part of the ALX Web Development program.</p>
+      <p>It demonstrates basic HTML, CSS, and JavaScript skills.</p>
+      <p>You will find multiple web pages linked together for navigation practice.</p>
+      <p>The structure uses semantic HTML5 elements like header, main, footer, article, and section.</p>
 
-    <!-- Main Content -->
-    <main>
-        <article>
-            <h1>Main Title</h1>
-            <p>This is my first paragraph. I am learning how to build a webpage using HTML.</p>
+      <h3>My Favorite Logo</h3>
+      <p>
+        <a href="https://www.alxafrica.com/" target="_blank">
+          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+        </a>
+      </p>
 
-            <h2>Subheading Level 2</h2>
-            <p>HTML stands for HyperText Markup Language. It helps structure the content of a webpage.</p>
+      <p>See my <a href="tweets.html">tweets</a>!</p>
 
-            <h3>Subheading Level 3</h3>
-            <p>This is the third paragraph. I am practicing headings, paragraphs, and images in HTML.</p>
+      <h3>Learners Table</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
+    </article>
 
-            <p>This is the fourth paragraph. Learning HTML is fun and it builds the foundation for web development.</p>
+    <aside>
+      <p>Placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-            <!-- Clickable Image -->
-            <a href="https://www.alxafrica.com" target="_blank">
-                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-            </a>
-
-            <!-- Table of Learners -->
-            <div>
-                <table border="1">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Age</th>
-                            <th>Country</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>John</td>
-                            <td>25</td>
-                            <td>USA</td>
-                        </tr>
-                        <tr>
-                            <td>Emily</td>
-                            <td>28</td>
-                            <td>Canada</td>
-                        </tr>
-                        <tr>
-                            <td>Michael</td>
-                            <td>32</td>
-                            <td>Australia</td>
-                        </tr>
-                        <tr>
-                            <td>Sophia</td>
-                            <td>21</td>
-                            <td>UK</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </article>
-
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
-
-    <!-- Footer -->
-    <footer>
-        <p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p>
-    </footer>
-
+  <!-- Footer -->
+  <footer>
+    <p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
