--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Uwakwe Nneoma - Homepage</title>
   <style>
-    /* Table styling to replace obsolete border attribute */
+    /* Table styling */
     table, th, td {
       border: 1px solid black;
       border-collapse: collapse;
@@ -12,7 +12,7 @@
       text-align: left;
     }
 
-    /* Optional: basic spacing for header/nav */
+    /* Layout spacing */
     header, main, footer {
       margin: 10px;
       padding: 10px;
@@ -39,7 +39,6 @@
   </style>
 </head>
 <body>
-  <!-- Header with navigation -->
   <header>
     <nav>
       <ul>
@@ -49,14 +48,13 @@
     </nav>
   </header>
 
-  <!-- Main content -->
   <main>
     <article>
       <h1>Welcome to My First Portfolio</h1>
       <h2>About This Project</h2>
       <p>This is my first portfolio webpage built as part of the ALX Web Development program.</p>
       <p>It demonstrates basic HTML, CSS, and JavaScript skills.</p>
-      <p>You will find multiple web pages linked together for navigation practice.</p>
+      <p>Multiple web pages are linked together for navigation practice.</p>
       <p>The structure uses semantic HTML5 elements like header, main, footer, article, and section.</p>
 
       <h3>My Favorite Logo</h3>
@@ -78,26 +76,10 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>John</td>
-            <td>25</td>
-            <td>USA</td>
-          </tr>
-          <tr>
-            <td>Emily</td>
-            <td>28</td>
-            <td>Canada</td>
-          </tr>
-          <tr>
-            <td>Michael</td>
-            <td>32</td>
-            <td>Australia</td>
-          </tr>
-          <tr>
-            <td>Sophia</td>
-            <td>21</td>
-            <td>UK</td>
-          </tr>
+          <tr><td>John</td><td>25</td><td>USA</td></tr>
+          <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
+          <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
+          <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
         </tbody>
       </table>
     </article>
@@ -107,7 +89,6 @@
     </aside>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p>
   </footer>
