Step 3: Checker-compliant homepage and tweets page

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,35 +4,28 @@
   <meta charset="utf-8">
   <title>Uwakwe Nneoma - Homepage</title>
   <style>
-    /* Table styling */
     table, th, td {
       border: 1px solid black;
       border-collapse: collapse;
       padding: 8px;
       text-align: left;
     }
-
-    /* Layout spacing */
     header, main, footer {
       margin: 10px;
       padding: 10px;
     }
-
     nav ul {
       list-style-type: none;
       padding: 0;
     }
-
     nav ul li {
       display: inline;
       margin-right: 10px;
     }
-
     nav ul li a {
       text-decoration: none;
       color: blue;
     }
-
     nav ul li a:hover {
       text-decoration: underline;
     }
@@ -54,7 +47,7 @@
       <h2>About This Project</h2>
       <p>This is my first portfolio webpage built as part of the ALX Web Development program.</p>
       <p>It demonstrates basic HTML, CSS, and JavaScript skills.</p>
-      <p>Multiple web pages are linked together for navigation practice.</p>
+      <p>You will find multiple web pages linked together for navigation practice.</p>
       <p>The structure uses semantic HTML5 elements like header, main, footer, article, and section.</p>
 
       <h3>My Favorite Logo</h3>
