--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,33 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>Uwakwe Nneoma - Homepage</title>
-  <style>
-    table, th, td {
-      border: 1px solid black;
-      border-collapse: collapse;
-      padding: 8px;
-      text-align: left;
-    }
-    header, main, footer {
-      margin: 10px;
-      padding: 10px;
-    }
-    nav ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    nav ul li {
-      display: inline;
-      margin-right: 10px;
-    }
-    nav ul li a {
-      text-decoration: none;
-      color: blue;
-    }
-    nav ul li a:hover {
-      text-decoration: underline;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -44,28 +17,23 @@
   <main>
     <article>
       <h1>Welcome to My First Portfolio</h1>
-      <h2>About This Project</h2>
       <p>This is my first portfolio webpage built as part of the ALX Web Development program.</p>
       <p>It demonstrates basic HTML, CSS, and JavaScript skills.</p>
       <p>You will find multiple web pages linked together for navigation practice.</p>
       <p>The structure uses semantic HTML5 elements like header, main, footer, article, and section.</p>
 
-      <h3>My Favorite Logo</h3>
+      <h2>My Favorite Logo</h2>
       <p>
         <a href="https://www.alxafrica.com/" target="_blank">
           <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
         </a>
       </p>
 
-      <p>See my <a href="tweets.html">tweets</a>!</p>
-
-      <h3>Learners Table</h3>
+      <h2>Learners Table</h2>
       <table>
         <thead>
           <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Country</th>
+            <th>Name</th><th>Age</th><th>Country</th>
           </tr>
         </thead>
         <tbody>
@@ -75,6 +43,8 @@
           <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
         </tbody>
       </table>
+
+      <p>See my <a href="tweets.html">tweets</a>!</p>
     </article>
 
     <aside>
