--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,7 +13,6 @@
       </ul>
     </nav>
   </header>
-
   <main>
     <article>
       <h1>Welcome to My First Portfolio</h1>
@@ -21,20 +20,12 @@
       <p>It demonstrates basic HTML, CSS, and JavaScript skills.</p>
       <p>You will find multiple web pages linked together for navigation practice.</p>
       <p>The structure uses semantic HTML5 elements like header, main, footer, article, and section.</p>
-
       <h2>My Favorite Logo</h2>
-      <p>
-        <a href="https://www.alxafrica.com/" target="_blank">
-          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-        </a>
-      </p>
-
+      <p><a href="https://www.alxafrica.com/" target="_blank"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200"></a></p>
       <h2>Learners Table</h2>
       <table>
         <thead>
-          <tr>
-            <th>Name</th><th>Age</th><th>Country</th>
-          </tr>
+          <tr><th>Name</th><th>Age</th><th>Country</th></tr>
         </thead>
         <tbody>
           <tr><td>John</td><td>25</td><td>USA</td></tr>
@@ -43,15 +34,12 @@
           <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
         </tbody>
       </table>
-
       <p>See my <a href="tweets.html">tweets</a>!</p>
     </article>
-
     <aside>
       <p>Placeholder to add comment thread later</p>
     </aside>
   </main>
-
   <footer>
     <p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p>
   </footer>
