Step 3: Checker-compliant HTML structure

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Uwakwe Nneoma - Tweets</title>
+<meta charset="utf-8">
+<title>Uwakwe Nneoma - Tweets</title>
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tweets.html">Tweets</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <article>
-      <h1>My Latest Tweet</h1>
-      <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Just started building my first HTML portfolio! #ALX #WebDevelopment</p>
-        &mdash; Uwakwe Nneoma (@UwakweNneoma)
-        <a href="https://twitter.com/UwakweNneoma/status/1234567890">Nov 14, 2025</a>
-      </blockquote>
-      <script async src="https://platform.twitter.com/widgets.js"></script>
-    </article>
-    <aside>
-      <p>Placeholder to add comment thread later</p>
-    </aside>
-  </main>
-  <footer>
-    <p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p>
-  </footer>
+<header>
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="tweets.html">Tweets</a></li>
+</ul>
+</nav>
+</header>
+<main>
+<article>
+<h1>My Latest Tweet</h1>
+<blockquote class="twitter-tweet">
+<p lang="en" dir="ltr">Just started building my first HTML portfolio! #ALX #WebDevelopment</p>
+&mdash; Uwakwe Nneoma (@UwakweNneoma)
+<a href="https://twitter.com/UwakweNneoma/status/1234567890">Nov 14, 2025</a>
+</blockquote>
+<script async src="https://platform.twitter.com/widgets.js"></script>
+</article>
+<aside><p>Placeholder to add comment thread later</p></aside>
+</main>
+<footer><p>Made by Uwakwe Nneoma - <a href="https://github.com/Ada-Mazi" target="_blank">here</a></p></footer>
 </body>
 </html>
